<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    tools:context=".activity.RegistrationActivity"
    android:theme="@style/Theme.Design.Light">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbarReg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minHeight="?attr/actionBarSize"
                android:theme="@style/ThemeOverlay.AppCompat.Dark"
                app:layout_scrollFlags="scroll|enterAlways"
                app:navigationIcon="@drawable/ic_arrow_back"
                app:title="Register Yourself"
                app:titleTextColor="@color/white" />
        </com.google.android.material.appbar.AppBarLayout>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <EditText
            android:id="@+id/etName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/rounded_border_for_view"
            android:drawableStart="@drawable/ic_profile"
            android:drawablePadding="4dp"
            android:hint="@string/name_min_3_characters"
            android:maxLines="1"
            android:padding="10dp"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/rounded_border_for_view"
            android:drawableStart="@drawable/ic_email"
            android:drawablePadding="4dp"
            android:hint="@string/email_address"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:padding="10dp"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/etMobile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/rounded_border_for_view"
            android:drawableStart="@drawable/ic_phone_icon"
            android:drawablePadding="4dp"
            android:hint="@string/mobile_number_10_digits"
            android:inputType="phone"
            android:padding="10dp"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/etAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/rounded_border_for_view"
            android:drawableStart="@drawable/ic_location"
            android:drawablePadding="4dp"
            android:hint="@string/delivery_address"
            android:padding="10dp"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/rounded_border_for_view"
            android:drawableStart="@drawable/ic_lock"
            android:drawablePadding="4dp"
            android:hint="@string/password_min_4_characters"
            android:inputType="numberPassword"
            android:padding="10dp"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/etConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/rounded_border_for_view"
            android:drawableStart="@drawable/ic_lock"
            android:drawablePadding="4dp"
            android:hint="@string/confirm_password"
            android:inputType="numberPassword"
            android:padding="10dp"
            android:textSize="20sp" />
    </LinearLayout>

    <Button

        android:id="@+id/btnRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="30dp"
        android:background="#ef2723"
        android:text="@string/register"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold" />

</LinearLayout>